--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=7.3.4"
+        "php": ">=7.3.4",
+        "firebase/php-jwt": "dev-master"
     },
     "autoload": {
         "psr-4": {
