--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.3.4",
-        "firebase/php-jwt": "dev-master"
+        "firebase/php-jwt": "v5.2.0"
     },
     "autoload": {
         "psr-4": {
